# krknctl-inference

./: README.md  pyproject.toml
src/krknctl_ai/: __init__.py  cli.py  config.py  inference.py
